fix(2606): drop the last commons-io usage from the permissions endpoint
The merge of main brought in the commons-io removal (commons-io is not an
OSGi bundle on Polarion 2606, so a Require-Bundle on it leaves the whole
plugin unresolved), but handlePostPermissions was added on this branch
afterwards and still called IOUtils.toString on the request body, which no
longer compiles now that the import is gone. Read the body with
InputStream.readAllBytes like every other body-reading path on main.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0135ko1RWFMDn8VJMgUBSh6F